postgres.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: sre
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-kong
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-kong
  labels:
    app: postgres-kong
  namespace: sre
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: postgres-kong
