kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sre
  name: kong-control-plane
  labels:
    app: kong-control-plane
spec:
  selector:
    matchLabels:
      app: kong-control-plane
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      annotations:
        k8s.konghq.com/sidecar-inject: "false"
      labels:
        app: kong-control-plane
    spec:
      serviceAccountName: kong
      containers:
      - name: kong-control-plane
        image: kong
        imagePullPolicy: IfNotPresent
        ports:
        - name: admin-http
          containerPort: 8001
        - name: admin-https
          containerPort: 8000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  namespace: sre
  name: kong-control-plane
spec:
  type: ClusterIP
  ports:
    - name: kong-admin
      port: 8001
    - name: kong-proxy
      port: 8000
  selector:
    app: kong-control-plane
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-private-rules
  namespace: sre
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  rules:
  - host: kong-admin.eu-west-1.dev.sre.ef-cloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-control-plane
          servicePort: 8001
  - host: whisperer-kong.eu-west-1.dev.sre.ef-cloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-control-plane
          servicePort: 8000
